# dcmspec

./: .gitignore  .sourcery.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  config.json  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: doc.yml  test.yml
api/: index.html
api/config/: index.html
api/csv_table_spec_parser/: index.html
api/doc_handler/: index.html
api/dom_table_spec_parser/: index.html
api/dom_utils/: index.html
api/iod_spec_builder/: index.html
api/iod_spec_printer/: index.html
api/json_spec_store/: index.html
api/module_registry/: index.html
api/pdf_doc_handler/: index.html
api/progress/: index.html
api/service_attribute_defaults/: index.html
api/service_attribute_model/: index.html
api/spec_factory/: index.html
api/spec_merger/: index.html
api/spec_model/: index.html
api/spec_parser/: index.html
api/spec_printer/: index.html
api/spec_store/: index.html
api/ups_xhtml_doc_handler/: index.html
api/xhtml_doc_handler/: index.html
apps/: index.html
apps/cli/: index.html
apps/dcmspec-explorer/: index.html
apps/iod-explorer/: index.html
apps/ui/: index.html
changelog/: index.html
cli/: index.html
cli/dataelements/: index.html
cli/iodattributes/: index.html
cli/iodmodules/: index.html
cli/modattributes/: index.html
cli/tdwiicontent/: index.html
cli/tdwiimoddefinition/: index.html
cli/uidvalues/: index.html
cli/upsdimseattributes/: index.html
cli/upsioddimseattributes/: index.html
configuration/: index.html
css/: mkdocstrings.css
docs/: 404.html  README.md  changelog.md  configuration.md  index.html  index.md  installation.md  objects.inv
docs/api/: config.md  csv_table_spec_parser.md  doc_handler.md  dom_table_spec_parser.md  dom_utils.md  index.md  iod_spec_builder.md  iod_spec_printer.md  json_spec_store.md  module_registry.md  pdf_doc_handler.md  progress.md  service_attribute_defaults.md  service_attribute_model.md  spec_factory.md  spec_merger.md  spec_model.md  spec_parser.md  spec_printer.md  spec_store.md  ups_xhtml_doc_handler.md  xhtml_doc_handler.md
installation/: index.html
search/: search_index.json
site/: 404.html  index.html
tests/: conftest.py  fixtures_dom_tables.py  test_config.py  test_csv_table_spec_parser.py  test_doc_handler.py  test_dom_table_spec_parser.py  test_dom_utils.py  test_iod_spec_builder.py  test_iod_spec_printer.py  test_json_spec_store.py  test_module_registry.py  test_pdf_doc_handler.py  test_service_attribute_defaults.py  test_service_attribute_model.py  test_spec_factory.py  test_spec_merger.py  test_spec_model.py  test_spec_printer.py  test_ups_xhtml_doc_handler.py  test_xhtml_doc_handler.py
(+103 files in other folders)
