[project]
name = "dcmspec"
version = "0.1.0"
description = ""
authors = [
    {name = "David Wikler",email = "david.wikler@ulb.ac.be"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "anytree (>=2.13.0,<3.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "platformdirs (>=4.3.8,<5.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "camelot-py (>=1.0.0,<2.0.0)",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber (>=0.11.7,<0.12.0)",
    "camelot-py (>=1.0.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0)",
]
gui = ["tkhtmlview (>=0.3.1,<0.4.0)"]

[tool.poetry]
packages = [{include = "dcmspec", from = "src"}]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-material = "^9.6.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dataelements = "dcmspec.cli.dataelements:main"
iodattributes = "dcmspec.cli.iodattributes:main"
uidvalues = "dcmspec.cli.uidvalues:main"
iodmodules = "dcmspec.cli.iodmodules:main"
upsioddimseattributes = "dcmspec.cli.upsioddimseattributes:main"
tdwiicontent = "dcmspec.cli.tdwiicontent:main"
upsdimseattributes = "dcmspec.cli.upsdimseattributes:main"
modattributes = "dcmspec.cli.modattributes:main"
dcmspec-explorer = "dcmspec.apps.dcmspec_explorer.dcmspec_explorer:main"

[tool.ruff]
line-length = 120
select = ["E", "F", "D"]  # E includes line-too-long (E501), D includes docstrings checks